# zed

./: .affected.toml  .deepsource.toml  .dockerignore  .editorconfig  .env.example  .envrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .gitworkflow  .handoff-introduce-thread-id.md  .last_built_commit  .mailmap  .prettierrc  .rules  .rules2  .semgrepignore  .squawk.toml  .swp  .zed.toml  .zed_docs_hashes.json  .zed_docs_store_id  1  ACTIVE_PROJECTS_ARCHITECTURE.md  ACTIVE_PROJECTS_PLAN.md  ACTIVE_PROJECTS_REFACTOR_PLAN.md  AGENTS.md  AGENT_PANEL_DOCK_BUTTONS.md  ANALYSIS.md  ASYNC_TERMINAL_IMPLEMENTATION.md  AUDIO_METRICS_PLAN.md  BRANCH_STRATEGY.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CLEANUP_CHECKLIST.md  CODE_OF_CONDUCT.md  CODE_REVIEW_SUMMARY.md  COLLAB_OVERLAY_IMPLEMENTATION_PLAN.md  (+293 more)
.temp/ai_engine/: Cargo.toml
.temp/ai_engine/src/: lib.rs
codeorbit/: CONTRIBUTING.md  Cargo.toml  README.md  codeorbit.toml  config.toml  flake.nix  pnpm-lock.yaml  zed.toml
codeorbit/.github/workflows/: matrix.yml
codeorbit/agents/: mod.rs
codeorbit/agents/backend/: mod.rs
codeorbit/agents/database/: mod.rs
codeorbit/agents/devops/: mod.rs
codeorbit/agents/docs/: mod.rs
codeorbit/agents/frontend/: component_generator_agent.rs  mod.rs  ui_planner_agent.rs
codeorbit/core/: agent_registry.rs  context.rs  error.rs  mod.rs  orchestrator.rs
codeorbit/policy/: default.yaml
codeorbit/scripts/: dev  release
codeorbit/src/: lib.rs
codeorbit/src/build-sandbox/: README.md
codeorbit/src/harmony-bridge/: README.md
codeorbit/src/ide/: Cargo.toml
codeorbit/src/llm-router/: Cargo.toml
codeorbit/src/updater/: Cargo.toml
codeorbit/tests/security/: smoke.sh
codeorbit/ui/: mod.rs  prompt_panel.rs
crates/acp/: Cargo.toml
crates/acp/src/: acp.rs  agent2.rs  claude.rs  server.rs  thread_element.rs  thread_view.rs
crates/acp_thread/: Cargo.toml
crates/acp_thread/src/: acp_thread.rs  connection.rs  diff.rs  mention.rs  old_acp_support.rs  provider_ui.rs  serialization.rs  session_client_state_store.rs  terminal.rs
crates/acp_tools/: Cargo.toml
crates/acp_tools/src/: acp_tools.rs
crates/action_log/: Cargo.toml  PLAN.md
crates/action_log/src/: action_log.rs
crates/actions/: Cargo.toml  build.rs
crates/actions/src/: lib.rs
crates/activity_indicator/: Cargo.toml
crates/activity_indicator/src/: activity_indicator.rs
crates/activity_indicator2/: Cargo.toml
crates/activity_indicator2/src/: activity_indicator.rs  activity_indicator2.rs
crates/agent/: Cargo.toml  NESTED_RATE_LIMIT_FIX.md  SHELL_PARSING_PLAN.md
crates/agent/benches/: edit_file_tool.rs
crates/agent/src/: actions.rs  active_thread.rs  agent.rs  agent2.rs  agent_activity.rs  agent_configuration.rs  agent_diff.rs  agent_model_selector.rs  agent_panel.rs  agent_panel_manager.rs  agent_profile.rs  agent_server.rs  agents_file.rs  assistant.rs  assistant_configuration.rs  assistant_diff.rs  assistant_model_selector.rs  assistant_panel.rs  auto_capture.rs  batch_assist.rs  buffer_codegen.rs  checkpoint.rs  claude_code_sessions.rs  command_queue.rs  completion_service.rs  context.rs  context_picker.rs  context_server_configration.rs  context_server_configuration.rs  context_server_tool.rs  context_service.rs  context_store.rs  context_strip.rs  conversation.rs  corruption.rs  db.rs  debug.rs  edit_agent.rs  feedback.rs  history_store.rs  (+32 more)
crates/agent2/: Cargo.toml
crates/agent2/src/: acp.rs  agent.rs  agent2.rs  db.rs  history_store.rs  legacy_thread.rs  native_agent_server.rs  prompts.rs  templates.rs  tests.rs  thread.rs  thread_element.rs  tool_schema.rs  tools.rs
crates/agent_rules/: Cargo.toml
crates/agent_rules/src/: agent_rules.rs
crates/agent_servers/: Cargo.toml
crates/agent_servers/src/: acp.rs  acp_connection.rs  agent_servers.rs  claude.rs  codex.rs  copilot.rs  custom.rs  e2e_tests.rs  gemini.rs  goose.rs  mcp_server.rs  old_acp_support.rs  qwen.rs  settings.rs  shell_parser.rs  stdio_agent_server.rs
crates/agent_settings/: Cargo.toml
crates/agent_settings/src/: agent_profile.rs  agent_settings.rs  user_agents_md.rs
crates/agent_skills/: Cargo.toml  README.md  agent_skills.rs  skill.rs
crates/agent_ui/: Cargo.toml
crates/agent_ui/src/: acp.rs  active_thread.rs  agent_configuration.rs  agent_connection_store.rs  agent_debug_panel.rs  agent_diff.rs  agent_model_selector.rs  agent_panel.rs  agent_registry_ui.rs  agent_ui.rs  agent_ui_tests.rs  agents_panel.rs  branch_names.rs  buffer_codegen.rs  completion_provider.rs  composer_panel.rs  config_options.rs  connection_view.rs  context.rs  context_picker.rs  context_server_configuration.rs  context_store.rs  context_strip.rs  context_window_display_selector.rs  conversation_view.rs  debug.rs  diagnostics.rs  (+45 more)
crates/agent_ui_v2/: Cargo.toml
crates/ai/: Cargo.toml  README.zmd
crates/ai_credit_status/: Cargo.toml
crates/ai_onboarding/: Cargo.toml
crates/ai_studio/: Cargo.toml  README.md  WORKFLOW_UIDE_INTEGRATION.md
crates/alert_dialog/: Cargo.toml
crates/ali_panel/: Cargo.toml
crates/anthropic/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compare_paths_fuzz.rs
gpui/: Cargo.toml  build.rs
gpui/examples/: text.rs
gpui/src/: app.rs  assets.rs  color.rs  elements.rs  executor.rs  font_cache.rs  fonts.rs  geometry.rs  image_data.rs  json.rs  keymap.rs  lib.rs  platform.rs  presenter.rs  scene.rs  sum_tree.rs  test.rs  text_layout.rs  util.rs  views.rs
semantic_ui/: Cargo.toml
semantic_ui/src/: lib.rs
zed/: Cargo.toml  build.rs
zed-rpc/: Cargo.toml  build.rs
zed-rpc/proto/: zed.proto
zed-rpc/src/: auth.rs  lib.rs  peer.rs  proto.rs  rest.rs
zed/src/: assets.rs  channel.rs  chat_panel.rs  editor.rs  file_finder.rs  fs.rs  fuzzy.rs  http.rs  language.rs  lib.rs  main.rs  menus.rs  operation_queue.rs  people_panel.rs  presence.rs  project.rs  project_browser.rs  project_panel.rs  rpc.rs  rpc_client.rs  settings.rs  sum_tree.rs  test.rs  theme.rs  theme_picker.rs  theme_selector.rs  throttle.rs  time.rs  timer.rs  user.rs  util.rs  watch.rs  workspace.rs  worktree.rs
(+16049 files in other folders)
